--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   "engines": {
     "node": ">=0.8.0"
   },
-  "main": "lib/index",
+  "main": "lib/index-traceur",
   "scripts": {
     "test": "cd test && node test"
   },
   "dependencies": {
+    "6to5": "^2.0.2",
     "grunt-contrib-uglify": "0.6.0",
     "traceur": "0.0.79",
     "when": "^3.6.4"
